--- a/src/html/css/components.css
+++ b/src/html/css/components.css
@@ -1,3 +1,7 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
 .badge-right {
   -webkit-border-top-left-radius: 0px;
   -moz-border-top-left-radius: 0px;
@@ -30,6 +34,25 @@
   padding-left:5px;
 }
 .badge-red {
-	border-color: #F00;
-	background-color: #AE423C;
+	background-color: #C0392B;
+}
+.badge-blue {
+	background-color: #2980b9;
+}
+.fullsize {
+	width: 100%;
+	height: 100%;
+}
+.pagewrapper>:not(.active) {
+	display: none !important;
+}
+.down50 {
+	position: relative;
+	top: 50px;
+}
+.fullsize.down50 {
+	height: calc(100% - 50px);
+}
+.fullsize.jumbotron {
+	margin-bottom: 0px;
 }
