--- a/src/html/css/components.css
+++ b/src/html/css/components.css
@@ -2,6 +2,10 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
+body {
+	padding-top: 60px;
+}
+
 .badge-right {
   -webkit-border-top-left-radius: 0px;
   -moz-border-top-left-radius: 0px;
@@ -55,4 +59,8 @@ html, body {
 }
 .fullsize.jumbotron {
 	margin-bottom: 0px;
+}
+.navbar-brand.active, .hash-active {
+	color: inherit;
+	background-color: rgba(255,255,255,.1);
 }
