--- a/src/html/css/components.css
+++ b/src/html/css/components.css
@@ -64,3 +64,8 @@ body {
 	color: inherit;
 	background-color: rgba(255,255,255,.1);
 }
+*.virtual {
+	width: 0px;
+	height: 0px;
+	display: none !important;
+}
