--- a/src/html/css/studentviews.css
+++ b/src/html/css/studentviews.css
@@ -12,7 +12,13 @@
 	margin: 0;
 	margin-bottom: 45px;
 }
+.view-login input.form-control {
+	/*background-image: linear-gradient(#009688,#009688),linear-gradient(#878787,#878787);*/
+}
 .view-login .form-control-wrapper .form-control:not(:focus) ~ .floating-label {
 	color: #777;
 	font-size: 18px;
+}
+.view-login .btn-primary {
+	width: 100%;
 }
