--- a/src/html/components/pc/pc-navbar/pc-navbar.html
+++ b/src/html/components/pc/pc-navbar/pc-navbar.html
@@ -4,10 +4,24 @@
 
 <style>
 	:host {
+		background-color: rgb(0, 150, 136);
+		display: block;
 		width: 100%;
 		height: 100%;
-		color: white;
-		font-family: RobotoDraft, Helvetica, Arial, sans-serif !important;
+		position: absolute;
+		top: 0;
+		right: 0;
+		left: 0;
+		border: 0;
+		z-index: 1030;
+		min-height: 50px;
+		margin-bottom: 20px;
+		-webkit-tap-highlight-color: transparent;
+		box-sizing: border-box;
+		font-family: RobotoDraft, Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+		font-weight: 300;
+		font-size: 14px;
+		line-height: 1.428;
 		-webkit-touch-callout: none;
 		-webkit-user-select: none;
 		-khtml-user-select: none;
@@ -15,6 +29,18 @@
 		-ms-user-select: none;
 		user-select: none;
 		font-size: 24px;
+	}
+	:host::before {
+		display: table;
+		content: " ";
+		box-sizing: border-box;
+	}
+	#wide-navbar-items {
+		padding-right: 15px;
+		padding-left: 15px;
+		margin-right: auto;
+		margin-left: auto;
+		display: block;
 	}
 	paper-button { 
 		display: block;
@@ -36,18 +62,18 @@
 </style>
 
 <template>
-	<paper-toolbar>
+	<div id="wide-navbar-items">
 		<content></content>
 		<paper-button href="#">{{brand}}</paper-button>
 		<paper-button href="#schedule">Schedule</paper-button>
-	</paper-toolbar>
+	</div>
 </template>
 
 <script>
 Polymer({
 
-    is: "pc-navbar",
-
+    is: 'pc-navbar',
+	extends: 'nav',
     properties: {},
 	echo(arg) {
 		console.log('echo',arg);
