--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -28,6 +28,9 @@
 	paper-toolbar {
 		--paper-toolbar-background: #009688;
 	}
+	pc-navbar, paper-header-panel[main] {
+		width: 100%;
+	}
 </style>
 
 <template>
