--- a/src/html/components/paper/paper-toolbar/paper-toolbar.html
+++ b/src/html/components/paper/paper-toolbar/paper-toolbar.html
@@ -8,7 +8,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="/components/polymer/polymer.html">
-<link rel="import" href="../paper-styles/paper-styles.html">
+<link rel="import" href="/components/paper/paper-styles/paper-styles.html">
 
 <!--
 `paper-toolbar` is a horizontal bar containing items that can be used for
