--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -45,8 +45,8 @@
 			</paper-listbox>
 		</paper-header-panel>
 		<paper-header-panel main>
-			<pc-navbar brand$="{{brand}}" title$="{{title}}">
-				<paper-icon-button icon="menu" style="color: white;" paper-drawer-toggle></paper-icon-button>
+			<pc-navbar brand$="{{brand}}" title$="{{title}}" class="paper-toolbar">
+				<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" paper-drawer-toggle></paper-icon-button>
 			</pc-navbar>
 			<div> Main content... </div>
 		</paper-header-panel>
