--- a/src/html/components/iron/iron-autogrow-textarea/iron-autogrow-textarea.html
+++ b/src/html/components/iron/iron-autogrow-textarea/iron-autogrow-textarea.html
@@ -8,11 +8,11 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-behaviors/iron-control-state.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
-<link rel="import" href="../iron-form-element-behavior/iron-form-element-behavior.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-behaviors/iron-control-state.html">
+<link rel="import" href="/components/iron/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="/components/iron/iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="/components/iron/iron-form-element-behavior/iron-form-element-behavior.html">
 
 <!--
 `iron-autogrow-textarea` is an element containing a textarea that grows in height as more
