--- a/src/html/components/iron/iron-dropdown/iron-dropdown.html
+++ b/src/html/components/iron/iron-dropdown/iron-dropdown.html
@@ -8,13 +8,13 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
-<link rel="import" href="../iron-a11y-keys-behavior/iron-a11y-keys-behavior.html">
-<link rel="import" href="../iron-behaviors/iron-control-state.html">
-<link rel="import" href="../iron-overlay-behavior/iron-overlay-behavior.html">
-<link rel="import" href="../neon-animation/neon-animation-runner-behavior.html">
-<link rel="import" href="../neon-animation/animations/opaque-animation.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="/components/iron/iron-a11y-keys-behavior/iron-a11y-keys-behavior.html">
+<link rel="import" href="/components/iron/iron-behaviors/iron-control-state.html">
+<link rel="import" href="/components/iron/iron-overlay-behavior/iron-overlay-behavior.html">
+<link rel="import" href="/components/neon/neon-animation/neon-animation-runner-behavior.html">
+<link rel="import" href="/components/neon/neon-animation/animations/opaque-animation.html">
 <link rel="import" href="iron-dropdown-scroll-manager.html">
 
 <!--
