--- a/src/html/components/iron/iron-input/iron-input.html
+++ b/src/html/components/iron/iron-input/iron-input.html
@@ -8,8 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-validatable-behavior/iron-validatable-behavior.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-validatable-behavior/iron-validatable-behavior.html">
 
 <script>
 
