--- a/src/html/components/iron/iron-overlay-behavior/iron-overlay-behavior.html
+++ b/src/html/components/iron/iron-overlay-behavior/iron-overlay-behavior.html
@@ -8,9 +8,9 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-fit-behavior/iron-fit-behavior.html">
-<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-fit-behavior/iron-fit-behavior.html">
+<link rel="import" href="/components/iron/iron-resizable-behavior/iron-resizable-behavior.html">
 <link rel="import" href="iron-overlay-backdrop.html">
 <link rel="import" href="iron-overlay-manager.html">
 
