--- a/src/html/components/paper/paper-badge/paper-badge.html
+++ b/src/html/components/paper/paper-badge/paper-badge.html
@@ -8,10 +8,10 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../iron-resizable-behavior/iron-resizable-behavior.html">
-<link rel="import" href="../paper-styles/default-theme.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="/components/iron/iron-resizable-behavior/iron-resizable-behavior.html">
+<link rel="import" href="/components/paper/paper-styles/default-theme.html">
 
 <!--
 `<paper-badge>` is a circular text badge that is displayed on the top right
