--- a/src/html/components/paper/paper-behaviors/paper-checked-element-behavior.html
+++ b/src/html/components/paper/paper-behaviors/paper-checked-element-behavior.html
@@ -8,8 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-checked-element-behavior/iron-checked-element-behavior.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-checked-element-behavior/iron-checked-element-behavior.html">
 <link rel="import" href="paper-inky-focus-behavior.html">
 
 <script>
