--- a/src/html/components/paper/paper-checkbox/paper-checkbox.html
+++ b/src/html/components/paper/paper-checkbox/paper-checkbox.html
@@ -8,11 +8,11 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../paper-ripple/paper-ripple.html">
-<link rel="import" href="../paper-styles/default-theme.html">
-<link rel="import" href="../paper-styles/color.html">
-<link rel="import" href="../paper-behaviors/paper-checked-element-behavior.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/paper/paper-ripple/paper-ripple.html">
+<link rel="import" href="/components/paper/paper-styles/default-theme.html">
+<link rel="import" href="/components/paper/paper-styles/color.html">
+<link rel="import" href="/components/paper/paper-behaviors/paper-checked-element-behavior.html">
 
 <!--
 Material design: [Checkbox](https://www.google.com/design/spec/components/selection-controls.html#selection-controls-checkbox)
