--- a/src/html/components/paper/paper-input/paper-input-behavior.html
+++ b/src/html/components/paper/paper-input/paper-input-behavior.html
@@ -7,8 +7,8 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-behaviors/iron-control-state.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/iron/iron-behaviors/iron-control-state.html">
 
 <script>
 
