--- a/src/html/components/paper/paper-input/paper-input-container.html
+++ b/src/html/components/paper/paper-input/paper-input-container.html
@@ -8,8 +8,8 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../paper-styles/paper-styles.html">
+<link rel="import" href="/components/polymer/polymer.html">
+<link rel="import" href="/components/paper/paper-styles/paper-styles.html">
 
 <!--
 `<paper-input-container>` is a container for a `<label>`, an `<input is="iron-input">` or
