Worked on login view

--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -1,12 +1,15 @@
 <link rel="import" href="/components/polymer/polymer.html">
-<pc-loader target='["pc-sidebar","paper-card","paper-ripple","paper-scroll-header-panel","paper-toolbar","paper-listbox","paper-item","pc-navbar"]'></pc-loader>
+<pc-loader target='["pc-login-view","pc-sidebar","paper-card","paper-ripple","paper-scroll-header-panel","paper-toolbar","paper-listbox","paper-item","pc-navbar"]'></pc-loader>
 <link rel="import" href="/components/paper/paper-card/paper-card.html">
 <dom-module id="pc-stage">
 
 <style>
 	:host {
 		width: 100%;
-		height: 100%;
+		min-height: 100%;
+	}
+	:host paper-drawer-panel {
+		background-color: #EEE;
 	}
 	:host #drawerPanel {
 		position: fixed;
@@ -18,7 +21,7 @@
 		left: 0px;
 		width: 100%;
 	}
-	#contentPanel #navbar-brand {
+	:host #contentPanel #navbar-brand {
 		color: white !important
 		text-transform: none;
 	}
@@ -32,6 +35,11 @@
 	pc-navbar, paper-header-panel[main] {
 		width: 100%;
 	}
+	.main {
+		width: 100%;
+		position: fixed;
+		padding-top: 60px;
+	}
 </style>
 
 <template>
@@ -41,15 +49,15 @@
 				<div>Application</div>
 			</paper-toolbar>
 			<pc-sidebar>
-				<a href="javascript:void(0)">Foo</a>
-				<a href="javascript:void(0)">Bar</a>
 			</pc-sidebar>
 		</paper-scroll-header-panel>
 		<paper-header-panel main>
 			<pc-navbar brand$="{{brand}}" title$="{{title}}" class="paper-toolbar">
 				<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" paper-drawer-toggle></paper-icon-button>
 			</pc-navbar>
-			<div> Main content... </div>
+			<div class="main">
+				<pc-login-view title$={{title}}></pc-login-view>
+			</div>
 		</paper-header-panel>
 	</paper-drawer-panel>
 </template>
@@ -89,3 +97,4 @@ Polymer({
 
 });
 </script>
+</dom-module>
