--- a/src/html/components/pc/pc-navbar/pc-navbar.html
+++ b/src/html/components/pc/pc-navbar/pc-navbar.html
@@ -3,24 +3,36 @@
 <dom-module id="pc-navbar">
 	<link rel="import" type="css" href="pc-navbar.css"/>
 	<template>
-		<div id="container">
-			<div id="navbar-header">
+		<div class="navbar-container">
+			<div class="navbar-header">
 				<span class="navbar-menu-button"><content select=".navbar-header-item"></content></span>
 				<paper-button class="navbar-brand" href="#">{{brand}}</paper-button>
 			</div>
-			<div id="titlebar">
+			<div class="navbar-titlebar">
 				<span>{{title}}</span>
 			</div>
-			<ul id="navbar-itemlist">
+			<ul class="navbar-itemlist">
 				<paper-button href="#schedule">Schedule</paper-button>
 				<paper-button href="#assignments">Assignments</paper-button>
+				<paper-button href="#clubs">Clubs</paper-button>
 			</ul>
 		</div>
 	</template>
 	<script>
 		Polymer({
 			is: 'pc-navbar',
-			properties: {},
+			properties: {
+				mobile: {
+					type: Boolean,
+					readOnly: true
+				},
+				brand: {
+					type: String
+				},
+				title: {
+					type: String
+				}
+			},
 			ready: function() {
 				window.navbar=this;
 				console.log('hi!');
