--- a/src/html/components/pc/pc-navbar/pc-navbar.css
+++ b/src/html/components/pc/pc-navbar/pc-navbar.css
@@ -93,6 +93,7 @@ paper-toolbar * {
 	#titlebar {
 		width: 100%;
 		text-align: center;
+		color: white;
 	}
 	#titlebar span {
 		display: inline-block;
