--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -12,13 +12,13 @@
 		background-color: #EEE;
 	}
 	:host #drawerPanel {
-		position: fixed;
 		display: none;
+		position: fixed;
 	}
 	:host #contentPanel {
+		left: 0px;
 		position: absolute;
 		top: 0px;
-		left: 0px;
 		width: 100%;
 	}
 	:host #contentPanel #navbar-brand {
@@ -36,9 +36,11 @@
 		width: 100%;
 	}
 	.main {
-		width: 100%;
-		position: fixed;
+		background-color: #EEE;
 		height: 100%;
+		margin-top: 60px;
+		position: fixed;
+		width: 100%;
 	}
 </style>
 
