--- a/src/html/components/pc/pc-navbar/pc-navbar.html
+++ b/src/html/components/pc/pc-navbar/pc-navbar.html
@@ -12,8 +12,9 @@
 				<span>{{title}}</span>
 			</div>
 			<ul id="navbar-itemlist">
-				<paper-button href="#schedule">Schedule</paper-button>
-				<paper-button href="#assignments">Assignments</paper-button>
+				<paper-button href="#schedule" id="schedule">Schedule</paper-button>
+				<paper-button href="#assignments" id="assignments">Assignments</paper-button>
+				<paper-button href="#grades" id="grades">Grades</paper-button>
 			</ul>
 		</div>
 	</template>
@@ -24,6 +25,13 @@
 			ready: function() {
 				window.navbar=this;
 				console.log('hi!');
+				$(this).find('paper-button[href]').on('click',function(e) {
+				
+//					if ('pushState' in history)
+	//					history.pushState({origin:'navbar'},'title',$(e.target).attr('href'));
+		//			else
+						window.location = $(e.target).attr('href');
+				})
 			}
 		});
 	</script>
