--- a/src/html/components/pc/pc-navbar/pc-navbar.html
+++ b/src/html/components/pc/pc-navbar/pc-navbar.html
@@ -3,10 +3,10 @@
 <dom-module id="pc-navbar">
 	<link rel="import" type="css" href="pc-navbar.css"/>
 	<template>
-		<div class="navbar-container">
-			<div class="navbar-header">
-				<span class="navbar-menu-button"><content select=".navbar-header-item"></content></span>
-				<paper-button class="navbar-brand" href="#">{{brand}}</paper-button>
+		<div class="navbar-container mh50">
+			<div class="navbar-header mh50">
+				<span class="navbar-menu-button mh50"><content select=".navbar-header-item"></content></span>
+				<paper-button class="navbar-brand mh50" href="#">{{brand}}</paper-button>
 			</div>
 			<div class="navbar-titlebar">
 				<span>{{title}}</span>
