--- a/src/html/components/pc/pc-navbar/pc-navbar.css
+++ b/src/html/components/pc/pc-navbar/pc-navbar.css
@@ -28,8 +28,11 @@
 	content: " ";
 	box-sizing: border-box;
 }
+.mh50 {
+	min-height: 50px;
+}
 .navbar-container {
-	display: block;
+	height: 100%;
 	margin-right: auto;
 	margin-left: auto;
 	padding-right: 15px;
@@ -39,16 +42,39 @@
 	display: block;
 	float: left;
 	height: 100%;
-	min-height: 44px;
-	min-width: 44px;
+	min-width: 50px;
 }
 .navbar-brand {
 	margin-left: -15px;
 	text-decoration: none;
 	font-size: 18px;
-	height: 60px;
 	line-height: 30px;
 	padding: 15px;
+}
+.navbar-titlebar {
+	color: white;
+	text-align: center;
+	width: 100%;
+}
+.navbar-titlebar>span {
+	display: inline-block;
+	margin: none;
+	padding: 5px 10px;
+}
+.navbar-itemlist {
+	float: left;
+	height: 100%;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+.navbar-itemlist>* {
+	display: inline-block;
+	margin-right: -6px;
+	font-size: 14px;
+	line-height: 20px;
+	padding: 20px 15px 20px 15px;
+	position: relative;
 }
 :host paper-button { 
 	border-radius: 0;
@@ -63,8 +89,9 @@
 	text-transform: none !important;
 	transition: 1s ease all;
 }
-paper-button.hash-active, paper-button:target {
+:host paper-button.hash-active, :host paper-button:target {
 	background-color: #40B0A6;
+	transition-duration: .1s;
 }
 :host paper-toolbar {
 	--paper-toolbar-background: #009688;
@@ -72,91 +99,21 @@ paper-button.hash-active, paper-button:target {
 :host paper-toolbar * {
 	margin: 4px;
 }
-.navbar-titlebar {
-	color: white;
-}
 :host ::content paper-icon-button {
 	height: 100%;
-	min-width: 44px;
+	min-width: 50px;
+	min-height: 50px;
+	padding: 12px 13px 12px 13px;
 }
 :host ::content paper-icon-button iron-icon#icon {
-	width: 24px;
 	height: 24px;
-	margin-left: 2px;
+	width: 24px;
 }
-:host:not([mobile]) .navbar-itemlist {
-	float: left;
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-
-.navbar-itemlist>* {
-	display: inline-block;
-}
-.navbar-itemlist>*:not(:first-child) {
-	margin-left: -6px;
-}
-:host:not([mobile]) .navbar-itemlist paper-button {
-	padding: 20px 15px 20px 15px;
-	font-size: 14px;
-	line-height: 20px;
-	position: relative;
-}
+/* Hide sidebar/titlebar in desktop mode */
 :host:not([mobile]) .navbar-menu-button, :host:not([mobile]) .navbar-titlebar {
 	display: none;
 }
-/* Mobile styles */
+/* Hide navbar in mobile mode */
 :host[mobile] .navbar-itemlist, :host[mobile] .navbar-brand {
 	display: none;
-}
-:host[mobile] .navbar-titlebar {
-	width: 100%;
-	text-align: center;
-}
-:host[mobile] .navbar-titlebar span {
-	display: inline-block;
-	margin: none;
-	padding: 5px 10px;
-}
-
-@media all and (min-width: 768px) {
-	#navbar-itemlist {
-		float: left;
-		height: 100%;
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-	}
-	#navbar-itemlist>* {
-		display: inline-block;
-	}
-	#navbar-itemlist paper-button {
-		font-size: 14px;
-		line-height: 20px;
-		padding: 20px 15px 20px 15px;
-		position: relative;
-	}
-	#navbar-itemlist paper-button:not(:first-of-type) {
-		margin-left: -6px;
-	}
-	.navbar-menu-button, #titlebar {
-		display: none;
-	}
-}
-@media all and (max-width: 768px) {
-	#navbar-itemlist, .navbar-brand {
-		display: none;
-	}
-	#titlebar {
-		color: white;
-		text-align: center;
-		width: 100%;
-	}
-	#titlebar span {
-		display: inline-block;
-		margin: none;
-		padding: 5px 10px;
-	}
 }
