Fixed drawer toggle w/ button

--- a/src/html/components/pc/pc-stage/pc-stage.html
+++ b/src/html/components/pc/pc-stage/pc-stage.html
@@ -10,13 +10,13 @@
 		<div id="mainWrapper">
 			<paper-header-panel id="main">
 				<pc-navbar brand$="{{brand}}" title$="{{title}}" mobile$="[[mobile]]" class="paper-toolbar">
-					<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" pc-stage-toggle></paper-icon-button>
+					<paper-icon-button class="navbar-header-item" icon="menu" style="color: white;" on-tap="toggleDrawer"></paper-icon-button>
 				</pc-navbar>
 				<div main>
 					<pc-login-view title$={{title}}></pc-login-view>
 				</div>
 			</paper-header-panel>
-			<div id="scrim"></div>
+			<div id="scrim" on-tap="closeDrawer"></div>
 		</div>
 	</template>
 	
@@ -62,8 +62,6 @@
 				}
 			},
 			listeners: {
-				tap: '_onTap',
-				click: '_onTap'
 			},
 			ready: function() {
 				window.bar = this;
@@ -75,11 +73,11 @@
 			_getDrawerStyle: function(drawerWidth) {
 				return "width: "+drawerWidth;
 			},
-			_onTap: function(e) {
-				if ($(e.target).is('[pc-stage-toggle] *'))
-					this.open = !this.open;
-				if ($(e.target).is('#scrim'))
-					this.open=false;
+			toggleDrawer() {
+				this.open = !this.open;
+			},
+			closeDrawer() {
+				this.open = false;
 			}
 		});
 	</script>
