Worked on schedule view

--- a/src/html/components/pc/pc-login-view/pc-login-view.html
+++ b/src/html/components/pc/pc-login-view/pc-login-view.html
@@ -1,15 +1,5 @@
 <link rel="import" href="/components/polymer/polymer.html"/>
-<pc-loader target='["paper-input"]'></pc-loader>
-<link rel="import" href="/components/paper/paper-input/paper-input-container.html">
-<link rel="import" href="/components/paper/paper-input/paper-input-error.html">
-<link rel="import" href="/components/paper/paper-input/paper-input-char-counter.html">
-<link rel="import" href="/components/paper/paper-input/paper-textarea.html">
-<link rel="import" href="/components/iron/iron-input/iron-input.html">
-<link rel="import" href="/components/iron/iron-icon/iron-icon.html">
-<link rel="import" href="/components/iron/iron-icons/iron-icons.html">
-<link rel="import" href="/components/paper/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="/components/paper/paper-button/paper-button.html">
-<link rel="import" href="/components/pc/pc-input/pc-input.html">
+<pc-loader target='["pc-input","paper-button"]'></pc-loader>
 <dom-module id="pc-login-view">
 	<style>
 		:host {
