--- a/src/html/components/pc/pc-loader.html
+++ b/src/html/components/pc/pc-loader.html
@@ -14,6 +14,7 @@
 				ComponentLoader.getInstance()
 					.require(toLoad)
 					.then(() => ($this.trigger('load')));
+				$(this).remove();
 			}
 		});
 	</script>
