--- a/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.html
+++ b/src/html/components/pc/pc-student-schedule-view/pc-student-schedule-view.html
@@ -1,71 +1,44 @@
 <link rel="import" href="/components/polymer/polymer.html"/>
 <pc-loader target='["paper-input"]'></pc-loader>
 <dom-module id="pc-student-schedule-view">
-	<style>
-		:host {
-			width: 100%;
-			height: 100%;
-			border-width: 1px;
-			border-color: #ddd;
-		}
-		:host table {
-			margin: 4em auto;
-			position: absolute;
-			left: 0;
-			text-align: left;
-			padding-left: 5%;
-			border-spacing: 0;
-			border-collapse: collapse;
-			box-sizing: border-box;
-			border-color: grey;
-			width: 100%;
-			
-		}
-		:host thead {
-			vertical-align: middle;
-			border-color: inherit;
-			display: table-header-group;
-		}
-		:host th {
-			font-weight: bold;
-			padding: 8px;
-			line-height:  1.42857143px;
-			vertical-align: top;
-			border-top: 1px solid #ddd;
-			text-align: left;
-			font-weight: bold;
-			box-sizing: border-box;
-		}
-		:host tbody {
-			border-spacing: 2px;
-		}
-		.col-time {
-		}
-	</style>
+	<link rel="import" type="css" href="pc-student-schedule-view.css"/>
 	<template>
-		<table>
-			<thead>
-				<tr>
-					<th class="sortable col-time">Time<iron-icon icon="expand-less"></iron-icon></th>
-					<th>Block</th>
-					<th>Class</th>
-					<th>Teacher</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>8-9</td>
-					<td>1</td>
-					<td>Algebra 1</td>
-					<td><a href="mailto:foo@example.com">Ms. Smith</a></td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="container">
+			<table>
+				<thead>
+					<tr>
+						<th class="sortable col-time">Time<iron-icon icon="expand-less"></iron-icon></th>
+						<th>Block</th>
+						<th>Class</th>
+						<th>Teacher</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8-9</td>
+						<td>1</td>
+						<td>Algebra 1</td>
+						<td><a href="mailto:foo@example.com">Ms. Smith</a></td>
+					</tr>
+					<tr>
+						<td>9-10</td>
+						<td>2</td>
+						<td>Class 2</td>
+						<td><a href="mailto:bar@example.com">Mr. Jones</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</template>
 	<script>
 		Polymer({
 			is: 'pc-student-schedule-view',
-			properties: {},
+			properties: {
+				mobile: {
+					type: Boolean,
+					readOnly: true
+				},
+			},
 			ready: function() {
 				if (window.location.hash=='#schedule')
 					$(this).attr('active','');
